[metadata]
name = liecasadi
author = "Giuseppe L'Erario"
author_email = gl.giuseppelerario@gmail.com

[options]
packages = find:
python_requires = >=3.8
install_requires =
        numpy>=1.20
        casadi

[options.extras_require]
test = pytest
       manifpy

[tool:pytest]
addopts = --capture=no --verbose
