[metadata]
name = liecasadi
description = Rigid transform using Lie groups, written in CasADi!
long_description = file: README.md
long_description_content_type = text/markdown
author = Giuseppe L'Erario
author_email = gl.giuseppelerario@gmail.com
license_files = LICENSE

keywords =
    robotics
    automatic-differentiation
    optimization
    casadi
    lie-groups
    manifolds


[options]
packages = find:
package_dir =
        = src
python_requires = >=3.8
install_requires =
        numpy>=1.21
        casadi

[options.packages.find]
where = src

[options.extras_require]
test = pytest
       manifpy

[tool:pytest]
addopts = --capture=no --verbose
